--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -13,7 +13,7 @@
       <!-- Розмітка інпуту -->
       <div class="input-wraper">
         <input type="text" id="datetime-picker" />
-        <button type="button" data-start>Start</button>
+        <button id="start-button" type="button" data-start>Start</button>
       </div>
 
       <div class="timer">
