--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Timer page</title>
+    <title>Snackbat page</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -17,27 +17,35 @@
           <input class="delay-input" type="number" name="delay" required />
         </label>
 
-        <fieldset>
-          <legend>State</legend>
-          <label>
-            <input
-              class="state-input"
-              type="radio"
-              name="state"
-              value="fulfilled"
-              required
-            />
-            Fulfilled
-          </label>
-          <label>
-            <input type="radio" name="state" value="rejected" required />
-            Rejected
-          </label>
-        </fieldset>
+        <div class="state-wrapper">
+          <fieldset>
+            <legend>State</legend>
+            <label class="state-lable">
+              <input
+                class="state-input"
+                type="radio"
+                name="state"
+                value="fulfilled"
+                required
+              />
+              Fulfilled
+            </label>
+            <label class="label-radio">
+              <input
+                class="input-radio"
+                type="radio"
+                name="state"
+                value="rejected"
+                required
+              />
+              Rejected
+            </label>
+          </fieldset>
+          <button class="submit-button" type="submit">Create notification</button>
+        </form>
+        </div>
 
-        <button class="submit-button" type="submit">Create notification</button>
-      </form>
     </main>
-    <script type="module" src="./js/1-timer.js" type="module"></script>
+    <script type="module" src="./js/2-snackbar.js" type="module"></script>
   </body>
 </html>
